methods.args.MethodsArgs.scala.code
def move(stepCount: Int, forward: Boolean) {
  if forward {
    for (step <- 1 to stepCount) {
      forward()
    }
  } else {
    for (step <- 1 to stepCount) {
      backward()
  }
}